--- a/Sprint3/HMTL/Consultapedidos.html
+++ b/Sprint3/HMTL/Consultapedidos.html
@@ -50,24 +50,18 @@
       </div>
     </header>
 
-    <div>
+    <div style="text-align: center;">
       <form action="#">
         <h2>Consulta de pedidos</h2>
 
         <label for="idusuario">Id Usuario:</label>
-        <input type="text" id="idusuario" size="15" value="Digite Cedula ID" />
-        <br />
+        <input type="text"class="btdesde" id="idusuario" size="15" value="Digite Cedula ID" />
 
         <label for="numeropedido">N° Pedido:</label>
         <input
-          type="text"
-          id="numeropedido"
-          size="15"
-          value="Digite N° pedido"
-        />
+          type="text"class="btdesde"id="numeropedido"size="15"value="Digite N° pedido"/>
         <br />
-        <br />
-        <input type="submit" value="Consultar" />
+        <input type="submit" class="btconsultar"value="Consultar" />
       </form>
     </div>
     <br />
@@ -96,9 +90,9 @@
     <br />
     <br />
     <br />
-    <input type="submit" value="imprimir" />
     <form action="pedidos.html">
-      <input type="submit" value="cerrar" />
+    <input type="submit" class="btnoption"value="imprimir" />
+    <input class="btnoption"type="submit" value="cerrar" />>
     </form>
   </body>
 </html>
